# calc_app

./: .gitignore  README.md  pyproject.toml  test.py
src/calc_app/: __init__.py
src/calc_app/cli/: main.py
src/calc_app/core/: calculator.py  constants.py  evaluator.py  parser.py
src/calc_app/gui/: main.py
tests/: test_evaluator.py  test_parser.py
